{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 91,
  "lineage": "35d5e206-d4e0-b9b0-89d5-5cff3e22f8b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04887edec5bfc710c",
            "association_id": "eipassoc-08f0ffb7e267fca82",
            "domain": "vpc",
            "id": "eipalloc-04887edec5bfc710c",
            "instance": "i-09f9b0ffb978619d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc9b808fcdacf662",
            "private_dns": "ip-10-0-10-78.ec2.internal",
            "private_ip": "10.0.10.78",
            "public_dns": "ec2-54-161-161-231.compute-1.amazonaws.com",
            "public_ip": "54.161.161.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_security_group.ec2-sg",
            "aws_subnet.my-subnet-public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:873758647038:instance/i-09f9b0ffb978619d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f9b0ffb978619d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc9b808fcdacf662",
            "private_dns": "ip-10-0-10-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b286153dcded57f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ac8e881dcf5ef9cf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085bcc5c85752bcb4",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac8e881dcf5ef9cf"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.my-subnet-public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:internet-gateway/igw-00ae2c0d7339c4dc2",
            "id": "igw-00ae2c0d7339c4dc2",
            "owner_id": "873758647038",
            "tags": {
              "Name": "dev-my-igw"
            },
            "tags_all": {
              "Name": "dev-my-igw"
            },
            "vpc_id": "vpc-0cd33b7ad2f1dc4dc"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:route-table/rtb-0ad7eebc816eb1a9f",
            "id": "rtb-0ad7eebc816eb1a9f",
            "owner_id": "873758647038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ae2c0d7339c4dc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-my-rt"
            },
            "tags_all": {
              "Name": "dev-my-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd33b7ad2f1dc4dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-subnet-private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e1109d8f8718a2e",
            "route_table_id": "rtb-0ad7eebc816eb1a9f",
            "subnet_id": "subnet-053c80795878782dd"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.my-subnet-private",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-subnet-public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b61e27516bde0d7",
            "route_table_id": "rtb-0ad7eebc816eb1a9f",
            "subnet_id": "subnet-085bcc5c85752bcb4"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.my-subnet-public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:security-group/sg-0ac8e881dcf5ef9cf",
            "description": "control SSH / HTTPS traffic to/from the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac8e881dcf5ef9cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "73.139.114.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "873758647038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ec2-sg"
            },
            "tags_all": {
              "Name": "dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd33b7ad2f1dc4dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:subnet/subnet-053c80795878782dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c80795878782dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873758647038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-my-subnet-private"
            },
            "tags_all": {
              "Name": "dev-my-subnet-private"
            },
            "vpc_id": "vpc-0cd33b7ad2f1dc4dc"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:subnet/subnet-085bcc5c85752bcb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085bcc5c85752bcb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873758647038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-my-subnet-public"
            },
            "tags_all": {
              "Name": "dev-my-subnet-public"
            },
            "vpc_id": "vpc-0cd33b7ad2f1dc4dc"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873758647038:vpc/vpc-0cd33b7ad2f1dc4dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd4bb19d2cd15ab3",
            "default_route_table_id": "rtb-06660362652a3ee2b",
            "default_security_group_id": "sg-0f1d33c21561b6f34",
            "dhcp_options_id": "dopt-34adf950",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd33b7ad2f1dc4dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06660362652a3ee2b",
            "owner_id": "873758647038",
            "tags": {
              "Name": "dev-my-vpc"
            },
            "tags_all": {
              "Name": "dev-my-vpc"
            }
          }
        }
      ]
    }
  ]
}